<resources>
    <string name="app_name">MyQuiz</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_length_constraint">Password (length > 5)</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="invalid_password">here</string>
    <string name="img_history">history</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="initial_score">Score</string>

    <string name="incorrect_toast">Wrong!</string>
    <string name="correct_toast">You got it!</string>

    <string name="question_1">Valentine\'s day is banned in Saudi Arabia.1</string>
    <string name="question_2">Valentine\'s day is banned in Saudi Arabia.2</string>
    <string name="question_3">Valentine\'s day is banned in Saudi Arabia.3</string>
    <string name="question_4">Valentine\'s day is banned in Saudi Arabia.4</string>
    <string name="question_5">Valentine\'s day is banned in Saudi Arabia.5</string>
    <string name="question_6">Valentine\'s day is banned in Saudi Arabia.6</string>
    <string name="question_7">Valentine\'s day is banned in Saudi Arabia.7</string>
    <string name="question_8">Valentine\'s day is banned in Saudi Arabia.8</string>
    <string name="question_9">Valentine\'s day is banned in Saudi Arabia.9</string>
    <string name="question_10">Valentine\'s day is banned in Saudi Arabia.10</string>
    <string name="question_11">Valentine\'s day is banned in Saudi Arabia.11</string>
    <string name="question_12">Valentine\'s day is banned in Saudi Arabia.12</string>
    <string name="question_13">Valentine\'s day is banned in Saudi Arabia.13</string>
</resources>