<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/register_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:textIsSelectable="false"
        android:gravity="center"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textIsSelectable="false"
        android:gravity="center"/>

    <EditText
        android:id="@+id/register_password"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:gravity="center"/>

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/prompt_password_again"
        android:imeActionId="@+id/register_form_finished"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        tools:ignore="InvalidImeActionId" />

    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        android:onClick="signUp" />
</LinearLayout>