<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:layout_marginBottom="3dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/progress_bar"
        android:gravity="center"
        android:padding="20dp"
        android:id="@+id/scorelayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:padding="10dp"
            android:text="@string/initial_score"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_history"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="80dp"
            android:background="@drawable/history"
            android:clickable="true"
            android:contentDescription="@string/img_history"
            android:focusable="true"
            android:onClick="onClickHistory" />

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/question_1"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/scorelayout"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/true_button"
            android:background="@color/green"
            android:onClick="onClickTrue"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:text="@string/false_button"
            android:background="@color/colorFalseButton"
            android:onClick="onClickFalse"/>

    </LinearLayout>



</RelativeLayout>